# CountingTriangulations

./: CMakeLists.txt  CountTriangulations.cpp  CountTriangulations.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  README.md  Utils.cpp  Utils.hpp  Vec.cpp  Vec.hpp  main.cpp
